--- a/request.css
+++ b/request.css
@@ -35,15 +35,20 @@ a {
   margin-top: 25px;
   text-align: left;
   font-size: 5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   color: #333;
 }
 .request_text {
   margin-top: 5px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-family: 'Lato', sans-serif;
   margin-left: 25px;
   color: #333;
+}
+
+h2 {
+  margin: 25px;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 /* nav */
