--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+html {
+  visibility: hidden;
+}
+
+html.wf-active {
+  visibility: visible;
+}
+
 body {
   background-color: #efefef;
 }
@@ -24,6 +32,41 @@ h1 {
   margin: 0 20%;
 }
 
+#scrollbar::-webkit-scrollbar {
+  overflow: hidden;
+  width: 5px;
+  background: #fafafa;
+  border-radius: 5px;
+}
+
+#scrollbar::-webkit-scrollbar:horizontal {
+  height: 5px;
+}
+
+#scrollbar::-webkit-scrollbar-button {
+  display: none;
+}
+
+#scrollbar::-webkit-scrollbar-piece {
+  background: #eee;
+}
+
+#scrollbar::-webkit-scrollbar-piece:start {
+  background: #eee;
+}
+
+#scrollbar::-webkit-scrollbar-thumb {
+  overflow: hidden;
+  border-radius: 3px;
+  background: #333;
+}
+
+#scrollbar::-webkit-scrollbar-corner {
+  overflow: hidden;
+  border-radius: 3px;
+  background: #333;
+}
+
 .header_margin {
   margin: 60px 0;
   padding: 2em 0;
@@ -33,6 +76,14 @@ header {
   display: flex;
   height: 60px;
   align-items: center;
+}
+header a {
+  color: #1a1a1a;
+  font-family: a-otf-midashi-go-mb31-pr6n, sans-serif;
+  transition: color 0.2s;
+}
+header a:hover {
+  color: #0096db;
 }
 header h1 {
   text-align: left;
@@ -50,14 +101,6 @@ header ul {
 }
 header ul li {
   margin-left: 30px;
-}
-header ul li a {
-  color: #1a1a1a;
-  font-family: a-otf-midashi-go-mb31-pr6n, sans-serif;
-  transition: color 0.2s;
-}
-header ul li a:hover {
-  color: #0096db;
 }
 
 .post_wrap {
@@ -82,7 +125,7 @@ header ul li a:hover {
 .post_wrap .post_block .post img {
   width: 100%;
   transition: transform 0.5s ease;
-  vertical-align: bottom;
+  display: block;
 }
 .post_wrap .post_block .post img:hover {
   transform: scale(1.15);
@@ -91,7 +134,7 @@ header ul li a:hover {
   margin-top: 20px;
 }
 .post_wrap .post_block .desc {
-  margin: 0.5em 0;
+  margin: 0.4em 0 0.5em;
 }
 .post_wrap .post_block .desc a {
   font-size: 14px;
