--- a/index.scss
+++ b/index.scss
@@ -4,6 +4,13 @@ $text_col: #1a1a1a;
 $bg_col: #efefef;
 $accent_col: #0096db;
 
+html {
+    visibility: hidden;
+}
+html.wf-active {
+    visibility: visible;
+}
+
 body {
     background-color: $bg_col;
 } 
@@ -31,7 +38,45 @@ h1 {
     margin: 0 20%;
 }
 
+#scrollbar::-webkit-scrollbar {
+    overflow:hidden;
+    width:5px;
+    background:#fafafa;
+        
+    -webkit-border-radius:5px;
+    border-radius:5px;
+}
 
+#scrollbar::-webkit-scrollbar:horizontal {
+    height:5px;
+}
+
+#scrollbar::-webkit-scrollbar-button {
+    display:none;
+}
+
+#scrollbar::-webkit-scrollbar-piece {
+    background:#eee;
+}
+#scrollbar::-webkit-scrollbar-piece:start {
+    background:#eee;
+}
+
+#scrollbar::-webkit-scrollbar-thumb {
+    overflow:hidden;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+        
+    background:#333;
+}
+
+#scrollbar::-webkit-scrollbar-corner {
+    overflow:hidden;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+        
+    background:#333;
+}
 
 .header_margin {
     margin: 60px 0;
@@ -39,6 +84,15 @@ h1 {
 }
 
 header {
+    a {
+        color: $text_col;
+        font-family: a-otf-midashi-go-mb31-pr6n,sans-serif;
+        transition: color 0.2s;
+
+        &:hover {
+            color: $accent_col;
+        }
+    }
     display: flex;
     height: 60px;
     align-items: center;
@@ -62,15 +116,6 @@ header {
 
         li {
             margin-left: 30px;
-            a {
-                color: $text_col;
-                font-family: a-otf-midashi-go-mb31-pr6n,sans-serif;
-                transition: color 0.2s;
-
-                &:hover {
-                    color: $accent_col;
-                }
-            }
         }
     }
 }
@@ -100,7 +145,7 @@ header {
             img {
                 width: 100%;
                 transition: transform .5s ease;
-                vertical-align: bottom;
+                display: block;
     
                 &:hover {
                     transform:scale(1.15);
@@ -113,7 +158,7 @@ header {
         }
 
         .desc {
-            margin: .5em 0;
+            margin: .4em 0 .5em;
 
             a { 
                 font-size: 14px;
