--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
   visibility: hidden;
 }
@@ -22,7 +26,7 @@ p {
   font-style: normal;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: a-otf-midashi-go-mb31-pr6n, sans-serif;
   font-weight: 600;
   font-style: normal;
@@ -72,6 +76,10 @@ h1 {
   padding: 2em 0;
 }
 
+.celine {
+  font-size: 24px !important;
+}
+
 header {
   display: flex;
   height: 60px;
@@ -84,6 +92,10 @@ header a {
 }
 header a:hover {
   color: #0096db;
+}
+header .active a {
+  color: #0096db;
+  pointer-events: none;
 }
 header h1 {
   text-align: left;
@@ -100,32 +112,41 @@ header ul {
   list-style: none;
 }
 header ul li {
-  margin-left: 30px;
+  list-style-type: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  flex-grow: 1;
+  text-align: center;
+}
+header ul li:nth-child(3) {
+  padding-right: 0;
+}
+header ul li + li {
+  border-left: 1px solid #000;
 }
 
 .post_wrap {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  column-count: 2;
+  margin: 0 auto;
 }
 .post_wrap .post_block {
-  margin-right: 30px;
   margin-bottom: 30px;
-  position: relative;
   width: calc(50% - 15px);
-}
-.post_wrap .post_block:nth-child(2n) {
-  margin-right: 0;
+  break-inside: avoid;
 }
 .post_wrap .post_block .post {
   overflow: hidden;
   position: relative;
-  width: 100%;
   border-radius: 10px;
+  margin: 0;
 }
 .post_wrap .post_block .post img {
   width: 100%;
   transition: transform 0.5s ease;
-  display: block;
+  vertical-align: bottom;
 }
 .post_wrap .post_block .post img:hover {
   transform: scale(1.15);
@@ -166,14 +187,50 @@ header ul li {
   color: #efefef;
 }
 
+.link_btn {
+  margin-right: 0.5em;
+  margin-bottom: 0.5em;
+  padding: 0.4em 2em;
+  border-radius: 25px;
+  background-color: #e3e3e3;
+  font-size: 0.7em;
+  border: 0;
+  cursor: pointer;
+  color: #1a1a1a;
+  text-decoration: none;
+  font-family: a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  transition: background-color 0.3s cubic-bezier(0.03, 0.77, 0.15, 0.97);
+  transition: color 0.3s cubic-bezier(0.03, 0.77, 0.15, 0.97);
+}
+.link_btn:hover {
+  background-color: #1a1a1a;
+  color: #efefef;
+}
+
+.btn_youtube:hover {
+  background-color: #ff0000;
+  color: #ffffff;
+}
+
+.btn_spotify:hover {
+  background-color: #1DB954;
+  color: #ffffff;
+}
+
+.btn_bandcamp:hover {
+  background-color: #1da0c3;
+  color: #ffffff;
+}
+
 .footer_margin {
   margin-top: 2em;
-  padding: 40px 20%;
-  background-color: #e3e3e3;
+  padding: 60px 20%;
+  background-color: transparent;
 }
 .footer_margin footer {
   display: flex;
-  height: 60px;
   align-items: center;
 }
 .footer_margin footer h1 {
@@ -183,6 +240,7 @@ header ul li {
   font-weight: 600;
   font-style: normal;
   color: #1a1a1a;
+  vertical-align: middle;
 }
 .footer_margin footer nav {
   margin-left: auto;
@@ -194,20 +252,17 @@ header ul li {
 .footer_margin footer ul li {
   margin-left: 30px;
 }
+.footer_margin footer ul li a {
+  vertical-align: middle;
+}
 .footer_margin footer ul li a svg {
   width: 20px;
   fill: #1a1a1a;
   transition: fill 0.2s;
 }
-.footer_margin footer ul li a svg:hover {
-  fill: #0096db;
-}
 .footer_margin footer ul li a svg .cls-1 {
   fill: #1a1a1a;
   transition: fill 0.2s;
-}
-.footer_margin footer ul li a svg .cls-1:hover {
-  fill: #0096db;
 }
 
 #page_top {
@@ -233,7 +288,7 @@ header ul li {
   }
 
   .footer_margin {
-    padding: 40px 15%;
+    padding: 60px 15%;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -242,14 +297,7 @@ header ul li {
   }
 
   .footer_margin {
-    padding: 40px 10%;
-  }
-
-  .post_wrap .post_block {
-    margin-right: 20px;
-    margin-bottom: 20px;
-    position: relative;
-    width: calc(50% - 10px);
+    padding: 60px 10%;
   }
 }
 @media screen and (max-width: 425px) {
@@ -270,12 +318,23 @@ header ul li {
   }
   header ul li {
     margin-left: 25px;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: left;
+    flex-grow: 0;
   }
   header ul li:nth-child(1) {
     margin-left: 0;
   }
   header ul li:nth-child(3) {
     margin-right: auto;
+  }
+  header ul li + li {
+    border-left: 0;
+  }
+
+  .post_wrap .post_block {
+    width: 100%;
   }
 
   footer {
@@ -290,12 +349,6 @@ header ul li {
   }
   footer li:nth-child(1) {
     margin-left: 0 !important;
-  }
-
-  .post_wrap .post_block {
-    margin-right: 0;
-    margin-bottom: 30px;
-    width: 100%;
   }
 
   #page_top {
